# BaseFerRhin

./: .gitignore  README.md  config.yaml  pyproject.toml  requirements.txt
.cursor/agents/: archeo-ingest.md
data/analysis/: CROSS_FILE_RELATIONS.md
data/input/: 20240419_Inhumations silos (1).xlsx  20240425_habitats-tombes riches_Als-Lor (1).xlsx  20240425_mobilier_sepult_def (1).ods  20250324_necropoles_BFIIIb-HaD3_Als-Lor (1).xlsx  20250806_ADAB2011_ArkeoGis.csv  20250806_LoupBernard_ArkeoGis.csv  20250806_Patriarche_ageFer.xlsx  2026_afeaf_lineaire.dbf  Alsace_Basel_AF (1).xlsx  BDD-fun_AFEAF24-total_04.12 (1).xlsx  BdD_Proto_Alsace (1).xlsx  cag_68_biblio.doc  cag_68_index.doc  cag_68_texte.doc  ea_fr.dbf
data/output/: dedup_mobilier_report.csv  dedup_report.csv  ingest_report.csv  sepultures_mobilier_detail.csv  sites.csv  sites.geojson  sites.sqlite  sites_cleaned.csv  sites_cleaned_pre_necropoles_bfiiib.csv
data/processed/: DEDUPLICATE.json  DISCOVER.json  EXPORT.json  EXTRACT.json  GEOCODE.json  INGEST.json  NORMALIZE.json  pipeline_log.json  review_queue.json
data/reference/: periodes.json  (+3 more)
docs/: ARCHITECTURE.md  DATA-SOURCES.md  DOMAIN.md  PIPELINE.md  UI.md
prompts/: BaseFerRhin-RawData-before.md  BaseFerRhin-RawData.md  BaseFerRhin.md  BaseFerRhin.v0.md  CAG_BAS_RHIN.analyse.before.md  CAG_BAS_RHIN.analyse.v1.md  Imput_data_analysis.md  UI.BaseFerRhin.md
scripts/: analyze_input_files.py  ingest_alsace_basel_af.py  ingest_habitats_tombes_riches.py  ingest_inhumations_silos.py  ingest_necropoles_bfiiib.py  ingest_patriarche.py
src/: __main__.py
(+248 files in other folders)
